--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -66,7 +66,7 @@
 
 <!-- Side Navigation -->
 @*choose part*@
-<section class="mt-4">
+<section class="mt-4 bg-white">
     <div class="container justify-content-center align-content-center">
         <div class="row">
             <div class="col-lg-8">
