--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -9,9 +9,9 @@
 
 
 <section>
-    <div class="container-fluid">
-        <div class="row justify-content-center text-center section-row m-4 ">
-            <div class="col">
+    <div class="container-fluid bg-white">
+        <div class="row justify-content-center text-center section-row m-4">
+            <div class="col-12 col-md-8 col-lg-6">
                 @{
                     var cultureColour = "";
                     switch (ViewBag.Culture as string)
@@ -36,59 +36,49 @@
                             break;
                     }
                 }
-
-                <h2>Explore <span class="@cultureColour">@ViewBag.Culture</span> Events!</h2>
+                <div class="display-3 fw-bold">Explore <span class="@cultureColour">@ViewBag.Culture</span> Events!</div>
                 <div id="culture" data-culture="@ViewBag.Culture" style="display: none;"></div>
             </div>
-
         </div>
-        <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2 p-2 mt-2 mb-3  border-bottom" id="button-section">
-            <div class="col "></div>
-            <div class="col text-center">
-                <a class="btn culture-btn btn-primary text-nowrap w-25" href="">Events</a>
-                <a class="btn culture-btn btn-primary fs-6 w-25" href="">Quiz</a>
-                <a class="btn culture-btn btn-primary fs-6 w-25" href="">Attraction</a>
+        <div class="row justify-content-center m-auto bg-light border-2 p-2 mt-2 mb-3 border-bottom" id="button-section">
+            <div class="col-12 col-sm-6 col-md-4 text-center mb-1">
+                <a class="btn culture-btn btn-primary text-nowrap mb-2 mb-md-3 mb-lg-4" href="">Events</a>
             </div>
-            <div class="col"></div>
+            <div class="col-12 col-sm-6 col-md-4 text-center mb-1">
+                <a class="btn culture-btn btn-primary fs-6 mb-2 mb-md-3 mb-lg-4" href="">Quiz</a>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 text-center mb-1">
+                <a class="btn culture-btn btn-primary fs-6 mb-2 mb-md-3 mb-lg-4" href="">Attraction</a>
+            </div>
         </div>
-
 
         <div class="row justify-content-center section-row mt-5">
-            <div class="col-4">
-
-                <div id="calendar" class="mx-auto"></div>
-
+            <div class="col-12 col-md-6">
+                <div id="calendar" class="mx-auto w-75 h-auto"></div>
             </div>
-            <div class="col-4">
-                <div class="row text-center">
-                    <h6 style="background-color:powderblue;"><i>Click around the Calender to find Events for the Festivals above...</i></h6>
+            <div class="col-12 col-md-6">
+                <div class="row text-center w-75 h-auto">
+                    <h6 style="background-color:powderblue;"><i>Click around the Calendar to find Events for the Festivals above...</i></h6>
                 </div>
                 <div class="row">
                     <div id="events-list"></div>
-
                 </div>
-
             </div>
-
-
         </div>
-        <!-- quiz-->
-        <!-- Please add and adjust the CSS according to page (but please keep the messages same as the ones below)-->
-        <div class="row justify-content-center section-row bg-warning pt-5 mt-5" id="quiz-section">
+        <div class="row justify-content-center section-row bg-warning pt-5 mt-5 mb-5" id="quiz-section">
             <div class="col-lg-8 col-md-10 text-center">
                 <div class="row mb-3">
-                    <h1  style="word-spacing: 8px;" >Common Phrases and Cultural Etiquette Quiz</h1>
+                    <div class="display-2 fw-bold" style="word-spacing: 8px;">Common Phrases and Cultural Etiquette Quiz</div>
                 </div>
-                <div class="row justify-content-center pb-5 pt-5 ">
-                    <h4 id="startMessage" class="pb-5" >"Want to learn about this culture in depth? Try this quiz!"</h4>
-
-                    <button id="loadQuiz" class="btn btn-primary text-white culture-btn  w-25">Learn About @ViewBag.Culture  </button>
+                <div class="row justify-content-center pb-5 pt-5">
+                    <h4 id="startMessage" class="pb-5">"Want to learn about this culture in depth? Try this quiz!"</h4>
+                    <button id="loadQuiz" class="btn btn-primary w-25 text-white culture-btn">Learn About @ViewBag.Culture</button>
                 </div>
-                <div id="quizFrame" class="text-white" style="display:none;"></div> <!-- Placeholder for the iFrame if needed -->
+                <div id="quizFrame" class="text-white" style="display:none;"></div>
             </div>
         </div>
-     </div>
-
+        <div class="bg-white row"></div>
+    </div>
 </section>
 
 
